# server-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  configuration.yaml  render.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20220928084223_create_users_table.sql  20221001001847_modify_email_column_in_users.sql  20221001004738_add_email_to_users.sql  20221001010432_create_users_table.sql  20221019134718_create_users_table.sql  20221024031257_create_product_table.sql  20221024063129_add_featured_column_in_product_table.sql  20221024125338_create_carts_table.sql  20221024131812_add_cart_id_column.sql  20221027021259_create_users_table.sql  20221027022437_create_categories_table.sql  20221027022822_create_products_table.sql  20221027023108_create_carts_table.sql  20221218152155_create_orders.sql  20221218154627_create_order_items.sql
scripts/: init_db.sh  remove_db.sh
src/: authorization.rs  configuration.rs  cookie.rs  domain.rs  lib.rs  main.rs  response.rs  startup.rs  telemetry.rs  util.rs
src/auth/: password.rs
src/authentication/: mod.rs  password.rs
src/domain/: user.rs
src/request/: cart.rs  mod.rs  product.rs  user.rs
src/response/: cart.rs  mod.rs  order.rs  service_response.rs
src/routes/: mod.rs  users.rs
src/routes/auth/: change_password.rs  login.rs  mod.rs  password.rs  register.rs
src/routes/carts/: delete.rs  get.rs  mod.rs  post.rs  update.rs
src/routes/categories/: get.rs  mod.rs  post.rs  update.rs
src/routes/order/: post.rs
src/routes/orders/: get.rs  mod.rs  place_order.rs  post.rs  send_payment_link.rs
src/routes/payment/: checkout.rs  fulfill_order.rs  mod.rs
src/routes/products/: get.rs  mod.rs  post.rs  update.rs
src/routes/users/: change_password.rs  get.rs  login.rs  mod.rs  post.rs  update.rs
src/types/: cart.rs  category.rs  mod.rs  order.rs  product.rs  user.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  post_user.rs  users.rs
