[package]
name = "pharmacity"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pharmacity"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.15"
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
validator = "0.14"
anyhow = "1.0.40"
base64 = "0.13.0"
thiserror = "1.0.24"
rand = { version = "0.8", features=["std_rng"] }
sha3 = "0.9"
argon2 = { version = "0.4", features = ["std"] }
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = "0.6"
async-stripe = { version = "0.14",  features = ["runtime-async-std-surf", "checkout"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
	"offline"
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
